# bad_copenheimer

./: .deepsource.toml  .env  .gitignore  .replit  CODE_OF_CONDUCT.md  Pipfile  README.md  SECURITY.md  chat.py  dis-bot.pyw  funcs.py  log.txt  mongoBot.pyw  mongoHandler.pyw  outputs.json  package.json  playerlist.pyw  pyproject.toml  requirements.txt  scanCore.ipynb  scanCore.py  settings.json  setup.py  setup.pyw  stopper.pyw
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md
.github/workflows/: codeql-analysis.yml
outputs/: 172.0.0.0-192.255.255.255(2).txt  172.0.0.0-192.255.255.255(3).txt  172.0.0.0-192.255.255.255(4).txt  172.0.0.0-192.255.255.255(5).txt  172.0.0.0-192.255.255.255(6).txt  172.0.0.0-192.255.255.255.txt  172.65.0.238-172.65.0.238.txt  172.65.238.0-172.65.238.255(2).txt  172.65.238.0-172.65.238.255(3).txt  172.65.238.0-172.65.238.255(4).txt  172.65.238.0-172.65.238.255(5).txt  172.65.238.0-172.65.238.255(6).txt  172.65.238.0-172.65.238.255(7).txt  172.65.238.0-172.65.238.255.txt  172.65.238.0-172.65.240.0(2).txt  172.65.238.0-172.65.240.0(3).txt  172.65.238.0-172.65.240.0.txt  172.65.238.0-172.65.240.255(2).txt  172.65.238.0-172.65.240.255(3).txt  172.65.238.0-172.65.240.255(4).txt  172.65.238.0-172.65.240.255(5).txt  172.65.238.0-172.65.240.255.txt  172.65.238.212-172.65.238.212(2).txt  172.65.238.212-172.65.238.212(3).txt  172.65.238.212-172.65.238.212.txt
utils/: __init__.py  database.py  finder.py  logger.py  players.py  server.py  text.py
