[tool.poetry]
name = "badcopeheimer-3"
version = "0.1.0"
description = ""
authors = ["CarsonBountry <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
discord = "^1.7.3"
python-dotenv = "^0.19.1"
mcstatus = "^6.5.0"
javascript = "^2015.32.59"
require = "^0.1.1"
psutil = "^5.9.0"
quarry = "^1.8.0"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
